substrate/frame/support/test/tests/pallet_ui/duplicate_call_attr.stderr
error: Invalid duplicated attribute
  --> tests/pallet_ui/duplicate_call_attr.rs:39:12
   |
39 |     #[pallet::call]
   |               ^^^^
